--- a/index.html
+++ b/index.html
@@ -42,6 +42,58 @@
 
 
     </header>
+    <div class="container">
+        <div class="row detail-product">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col-md-5 col-sm-6 col-xs-12">
+                        <div class="product-images">
+                            <img src="images/mi-smart-scale-2-3.jpg" alt="" class="img-responsive product-image">
+                            <div class="tag">ناموجود
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-7 col-sm-6 col-xs-12">
+                        <div class="product-texts">
+                            <h1 class="product-title">ترازوی هوشمند شیائومی Mi Smart Scale 2</h1>
+                            <h2 class="product-sub-title">Xiaomi Mi Smart Scale 2 XMTZC04HM</h2>
+                        </div>
+                        <div class="product-rate">
+                            <div>
+                                <i class="fa fa-heart fa-2x"></i>
+                                <i class="fa fa-heart fa-2x"></i>
+                                <i class="fa fa-heart fa-2x"></i>
+                                <i class="fa fa-heart fa-2x"></i>
+                                <i class="fa fa-heart fa-2x"></i>
+                            </div>
+                            <div class="ml-2" style="color: #777;">
+                                ۵ دیدگاه
+                            </div>
+                            <div class="ml-5" style="color: #777;">
+                                گروه: جدیدترین جانبی ها
+                            </div>
+                        </div>
+                        <div class="product-price">
+                            <span>۴۳۸,۰۰۰</span>
+                            <span>ت</span>
+                        </div>
+                        <div class="product-color">
+                            <div class="colors">
+                                <div class="circle-color color-white"></div>
+                                <div class="circle-color color-blue"></div>
+                            </div>
+                            <div>
+                                انتخاب رنگ : سفید , آبی
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+    </div>
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src='js/bootstrap.min.js'></script>
