add similar product

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="header__left-menu">
                     <i class="fa fa-user fa-2x"></i>
-                    <i class="fa fa-cart-plus fa-2x"></i>
+                    <i class="fa fa-shopping-bag fa-2x"></i>
                     <i class="fa fa-search fa-2x"></i>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-6 col-xs-12">
                         <div class="product-images">
-                            <div class="owl-carousel owl-theme">
+                            <div class="owl-carousel owl-theme" id="product">
                                 <div> <img src="images/mi-smart-scale-2-3.jpg" alt="" class="img-responsive product-image">
                                 </div>
                                 <div> <img src="images/mi-smart-scale-2-2.jpg" alt="" class="img-responsive product-image">
@@ -160,6 +160,127 @@
                 </div>
                 <span>۷روز ضمانت بازگشت</span>
                 <div class="services__text">
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container">
+        <div class="row images-adv">
+            <div class="col-md-6 hauwei">
+                <div><img src="images/huawei-smartphones.jpg" alt=""> <button>محصولات هوآوی</button></div>
+            </div>
+            <div class="col-md-6 insta">
+                <div><img src="images/لایک.jpg" alt=""><button>کمپین اینستاگرام</button></div>
+            </div>
+        </div>
+    </div>
+    <div class="row container-fluid">
+        <div class="col-md-5 ">
+            <hr>
+        </div>
+        <div class="col-md-2 text-center">
+            محصولات مشابه
+        </div>
+        <div class="col-md-5 ">
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid product-similar">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="owl-carousel owl-theme" id="products">
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/1520848011844788-300x300.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/1570523271179903-300x300.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/Baseus-full-Screen-8000mAh-Wireless-Charger-Power-Bank-4-300x300.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/Baseus-Mini-S-Bracket-Wireless-Power-Bank-10000mAh_Accessories_11651_1-8-300x300.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/Baseus-Type-C-to-HDMI-Video-Adapter-2-300x300.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <div class="item__price">
+                            <div class="item__price--right">
+                                <del>
+                                    <span>۴۳۸۰۰۰</span>
+                            <span>ت</span>
+                            </del>
+                            </div>
+                            <div class="item__price--left">
+                                <span>۳۸۰۰۰۰</span>
+                                <span>ت</span>
+                            </div>
+                        </div>
+                        <img src="images/QCY-T5-Wireless-Bluetooth-Headset-300x300.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
