add simillar product again

--- a/index.html
+++ b/index.html
@@ -176,15 +176,17 @@
             </div>
         </div>
     </div>
-    <div class="row container-fluid">
-        <div class="col-md-5 ">
-            <hr>
-        </div>
-        <div class="col-md-2 text-center">
-            محصولات مشابه
-        </div>
-        <div class="col-md-5 ">
-            <hr>
+    <div class="container-fluid">
+        <div class="row ">
+            <div class="col-md-5 khat">
+                <hr>
+            </div>
+            <div class="col-md-2 text-center">
+                محصولات مشابه
+            </div>
+            <div class="col-md-5 khat">
+                <hr>
+            </div>
         </div>
     </div>
     <div class="container-fluid product-similar">
@@ -202,9 +204,17 @@
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/1520848011844788-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            Baseus full Screen 8000mAh Wireless Charger Power Bank
+                        </h3>
+                        <h4 class="item__sub-title">
+                            پاوربانک بی سیم بیسوس مدل full Screen با ظرفيت 8000 ميلی آمپر ساعت
+
+                        </h4>
                     </div>
                     <div class="item">
                         <div class="item__price">
@@ -217,9 +227,17 @@
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/1570523271179903-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            Baseus full Screen 8000mAh Wireless Charger Power Bank
+                        </h3>
+                        <h4 class="item__sub-title">
+                            پاوربانک بی سیم بیسوس مدل full Screen با ظرفيت 8000 ميلی آمپر ساعت
+
+                        </h4>
                     </div>
                     <div class="item">
                         <div class="item__price">
@@ -232,9 +250,17 @@
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/Baseus-full-Screen-8000mAh-Wireless-Charger-Power-Bank-4-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            Baseus Lanyard 20000mAh Power Bank
+                        </h3>
+                        <h4 class="item__sub-title">
+                            پاوربانک بیسوس مدل Lanyard با ظرفيت 20000 ميلی آمپر ساعت
+
+                        </h4>
                     </div>
                     <div class="item">
                         <div class="item__price">
@@ -242,14 +268,24 @@
                                 <del>
                                     <span>۴۳۸۰۰۰</span>
                             <span>ت</span>
+                            
                             </del>
                             </div>
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/Baseus-Mini-S-Bracket-Wireless-Power-Bank-10000mAh_Accessories_11651_1-8-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            Baseus Mini S 10000mAh Wireless Charger Power Bank
+                        </h3>
+                        <h4 class="item__sub-title">
+                            پاوربانک بی سیم بیسوس مدل Mini S با ظرفيت 10000 ميلی آمپر ساعت
+
+
+                        </h4>
                     </div>
                     <div class="item">
                         <div class="item__price">
@@ -262,9 +298,18 @@
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/Baseus-Type-C-to-HDMI-Video-Adapter-2-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            Baseus Type C to HDMI Video Adapter Cable
+                        </h3>
+                        <h4 class="item__sub-title">
+                            آداپتور Type C به HDMI بیسوس مدل NP021180R01BS
+
+
+                        </h4>
                     </div>
                     <div class="item">
                         <div class="item__price">
@@ -277,9 +322,16 @@
                             <div class="item__price--left">
                                 <span>۳۸۰۰۰۰</span>
                                 <span>ت</span>
+                                <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
                         </div>
                         <img src="images/QCY-T5-Wireless-Bluetooth-Headset-300x300.jpg" alt="">
+                        <h3 class="item__title">
+                            QCY T2C Wireless Bluetooth Headset
+                        </h3>
+                        <h4 class="item__sub-title">
+                            <br> هدفون بلوتوثی کیو سی وای مدل T2C
+                        </h4>
                     </div>
                 </div>
             </div>
