--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                 <div class="header__right-menu">
                     <ul class="">
                         <li>
-                            <a href="">محصولات من</a>
-
+                            <i class="fa fa-th fa-2x"></i><a href="">محصولات من</a>
                         </li>
                         <li>
-                            <a href="">بلاگ</a>
+                            <i class="fa fa-newspaper-o fa-2x"></i><a href="">بلاگ</a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +70,7 @@
                         </div>
                         <div class="product-rate">
                             <div>
-                                <i class="fa fa-heart fa-2x"></i>
+                                <i class="fa fa-heart-o fa-2x"></i>
                                 <i class="fa fa-heart fa-2x"></i>
                                 <i class="fa fa-heart fa-2x"></i>
                                 <i class="fa fa-heart fa-2x"></i>
@@ -176,15 +175,15 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row ">
-            <div class="col-md-5 khat">
+            <div class="col-md-5">
                 <hr>
             </div>
             <div class="col-md-2 text-center">
                 محصولات مشابه
             </div>
-            <div class="col-md-5 khat">
+            <div class="col-md-5">
                 <hr>
             </div>
         </div>
@@ -220,12 +219,12 @@
                         <div class="item__price">
                             <div class="item__price--right">
                                 <del>
-                                    <span>۴۳۸۰۰۰</span>
+                                    <span>۵۹۸۰۰۰</span>
                             <span>ت</span>
                             </del>
                             </div>
                             <div class="item__price--left">
-                                <span>۳۸۰۰۰۰</span>
+                                <span>۵۴۸۰۰۰</span>
                                 <span>ت</span>
                                 <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
@@ -243,12 +242,12 @@
                         <div class="item__price">
                             <div class="item__price--right">
                                 <del>
-                                    <span>۴۳۸۰۰۰</span>
+                                    <span>۴۲۱۰۰۰</span>
                             <span>ت</span>
                             </del>
                             </div>
                             <div class="item__price--left">
-                                <span>۳۸۰۰۰۰</span>
+                                <span>۴۰۲۰۰۰</span>
                                 <span>ت</span>
                                 <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
@@ -266,13 +265,13 @@
                         <div class="item__price">
                             <div class="item__price--right">
                                 <del>
-                                    <span>۴۳۸۰۰۰</span>
+                                    <span>۵۲۳۰۰۰</span>
                             <span>ت</span>
                             
                             </del>
                             </div>
                             <div class="item__price--left">
-                                <span>۳۸۰۰۰۰</span>
+                                <span>۴۹۲۰۰۰</span>
                                 <span>ت</span>
                                 <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
@@ -291,12 +290,12 @@
                         <div class="item__price">
                             <div class="item__price--right">
                                 <del>
-                                    <span>۴۳۸۰۰۰</span>
+                                    <span>۱۲۵۰۰۰</span>
                             <span>ت</span>
                             </del>
                             </div>
                             <div class="item__price--left">
-                                <span>۳۸۰۰۰۰</span>
+                                <span>۱۱۲۰۰۰</span>
                                 <span>ت</span>
                                 <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
@@ -315,12 +314,12 @@
                         <div class="item__price">
                             <div class="item__price--right">
                                 <del>
-                                    <span>۴۳۸۰۰۰</span>
+                                    <span>۸۳۴۰۰۰</span>
                             <span>ت</span>
                             </del>
                             </div>
                             <div class="item__price--left">
-                                <span>۳۸۰۰۰۰</span>
+                                <span>۷۹۴۰۰۰</span>
                                 <span>ت</span>
                                 <span class="arrow"><i class="fa fa-chevron-left"></i></span>
                             </div>
@@ -334,6 +333,144 @@
                         </h4>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container tab-detail">
+        <div class="row">
+            <div class="col-12">
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">توضیحات</a>
+                        <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">مشخصات فنی</a>
+                        <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">نظرات(۳)</a>
+                        <a class="nav-item nav-link" id="nav-price-tab" data-toggle="tab" href="#nav-price" role="tab" aria-controls="nav-price" aria-selected="false">نمودار قیمت</a>
+                    </div>
+                </nav>
+                <div class="tab-content custom-tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                        <p>
+                            امروزه همه افراد کم و بیش برای حفظ سلامت عمومی بدن به دنبال تناسب اندام و لاغری و هستند. برند شیائومی نیز علاقه زیادی به امر از خود نشان می دهد و با عرضه محصولات تناسب اندام متعدد با قیمت مناسب سهم بزرگی از بازار مربوطه را به خود اختصاص داده است. همچنین
+                            این شرکت در ادامه تولید محصولاتی برای پیگیری وضعیت سلامت، این بار ترازوی هوشمند 2 Xiaomi Mi Smart Scale را تولید کرده است که همانند سایر محصولات این شرکت می توان به کمک نرم افزار Mi Fit با آن ارتباط برقرار کرد. ترازوی هوشمند
+                            Xiaomi Mi Smart Scale با دقت 50 گرم وزن تمامی افراد خانواده را در بازه 100 گرم تا 150 کیلوگرم اندازه گیری کرده و نمایش می دهد. همچنین این ترازو به کمک سنسور مخصوص (G Sensor) می تواند کوچکترین تغییرات وزنی را هم اندازه بگیرد
+                            و با بهره گیری از سه الگوریتم متفاوت،‌ داده ها را ذخیره و تفسیر می کند. از دیگر ویژگی های بسیار مهم این ترازوی هوشمند می توان به وزن کردن دوحالته در آن اشاره کرد. به طوری که نه تنها افراد می توانند از آن برای وزن کردن خود استفاده
+                            کنند؛ بلکه سایر وسیله ها را نیز می توان با آن وزن نمود. با متصل بودن به اپلیکیشن مربوطه یعنی Mi Fit می تواند تغییرات وزن خود را در بازه های زمانی دلخواه پیگری کنید.(تا 800 بار می تواند در حافظه خود ذخیره نماید) همچنین این اپلیکیشن
+                            می تواند نمودار هایی برای روند تغییرات وزن شما ترسیم نماید. با ذخیره اطلاعات سن، قد و جنسیت خود می توانید تمرینات و رژیمتان را بر اساس شاخص BMI (محاسبه‌ وزن مناسب با توجه به قد فرد) تنظیم کنید. علاوه بر این، می توانید پروفایل
+                            های مختلفی برای هر فرد (16 پروفایل) در این ترازو ایجاد کنید و هر فرد فعالیت های خود را جداگانه دنبال نماید.
+                        </p>
+                    </div>
+                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="box__right">
+                                <strong>ابعاد</strong>
+                            </div>
+                            <div class="box__left">
+                                300x 300 x 22 میلی متر
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                        <div class="add-comments">
+                            <button type="button" class="btn btn-secondary c-secondary-button">
+                                <span><i class="fa fa-plus"></i></span>
+                                <span class="scale">نظرتان را بنویسید</span>
+                            </button>
+                            <div class="comments">
+                                <div class="comments__avatar">
+                                    <img src="images/profile.png" alt="">
+
+                                </div>
+                                <div class="comments__text">
+                                    <div>
+                                        <span class="user-name mr-1">معین</span>
+                                        <span class="mr-1"> - </span>
+                                        <span>۲۵ آذر ۱۳۹۸</span>
+                                    </div>
+                                    <p>این مدل در واقع ورژن 1 هستش درسته ؟ </p>
+                                    <div><i class="fa fa-level-down icons"></i>
+                                        <span>پاسخ</span></div>
+                                </div>
+                            </div>
+                            <div class="comments">
+                                <div class="comments__avatar">
+                                    <img src="./images/profile.png" alt="">
+                                </div>
+                                <div class="comments__text">
+                                    <div>
+                                        <span class="user-name mr-1">مهراد</span>
+
+                                        <span class="Bought-the-product"><i class="mr-2 fa fa-calendar-check-o"></i>خریدار
+                                                این محصول</span>
+                                        <span>۲۶ آذر ۱۳۹۸</span>
+                                    </div>
+                                    <p>ترازو باکیفیت و همچنین شیک است. به راحتی با گوشی ارتباط برقرار کرد. </p>
+                                    <div><i class="fa fa-level-down icons"></i>
+                                        <span>پاسخ</span></div>
+                                </div>
+                            </div>
+                            <div class="comments">
+                                <div class="comments__avatar">
+                                    <img src="./images/profile.png" alt="">
+                                </div>
+                                <div class="comments__text">
+                                    <div>
+                                        <span class="user-name mr-1">حسین</span>
+
+                                        <span>۲۲ آذر ۱۳۹۸</span>
+                                    </div>
+                                    <p>کیفیت عالی. </p>
+                                    <div><i class="fa fa-level-down icons"></i>
+                                        <span>پاسخ</span></div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-price" role="tabpanel" aria-labelledby="nav-price-tab">.546352
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
