--- a/index.html
+++ b/index.html
@@ -474,6 +474,51 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid footer-phone">
+        <div class="text-center footer-text">
+            <a href="tel:+989119904813">
+                <i class="fa fa-phone fa-2x mr-3"></i>تلفن مشاور : ۰۹۱۱۹۹۰۴۸۱۳</a>
+        </div>
+    </div>
+    <div class="container-fluid footer-menu">
+        <div class="row">
+            <div class="col-md-7">
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul class="menu">
+                            <li class="menu-item"><a href="">ساعت شیائومی</a></li>
+                            <li class="menu-item"><a href="">شارژر شیائومی</a></li>
+                            <li class="menu-item"><a href="">هندزفری شیائومی</a></li>
+                            <li class="menu-item"><a href="">کابل USB شیائومی</a></li>
+                            <li class="menu-item"><a href="">headphone  شیائومی</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="menu">
+                            <li class="menu-item"><a href="">محصولات شیائومی</a></li>
+                            <li class="menu-item"><a href="">محصولات سامسومنگ</a></li>
+                            <li class="menu-item"><a href="">محصولات نوکیا</a></li>
+                            <li class="menu-item"><a href="">محصولات نکسوس</a></li>
+                            <li class="menu-item"><a href="">محصولات اپل</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="col-md-4 col-sm-3 ">
+                            <h5>سایمان دیجیتال</h5>
+                            <ul class="menu">
+                                <li class="menu-item"><a href="">تماس با ما</a></li>
+                                <li class="menu-item"><a href="">بلاگ ما </a></li>
+                                <li class="menu-item"><a href="">دربا ره ی ما </a></li>
+                                <li class="menu-item"><a href="">فرصت شغلی </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+            </div>
+        </div>
+    </div>
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/popper.min.js"></script>
